--- a/package.json
+++ b/package.json
@@ -29,5 +29,13 @@
     "node-sass": "^4.12.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/SmaLLAlien/epam_fe_2019_belousov.git"
+  },
+  "bugs": {
+    "url": "https://github.com/SmaLLAlien/epam_fe_2019_belousov/issues"
+  },
+  "homepage": "https://github.com/SmaLLAlien/epam_fe_2019_belousov#readme"
 }
