--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "lint": "eslint --fix --ext .js,.jsx ."
   },
   "keywords": [
     "RD",
@@ -29,5 +30,9 @@
     "node-sass": "^4.12.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0"
+  },
+  "dependencies": {
+    "bootstrap-sass": "^3.4.1",
+    "jquery": "^3.4.1"
   }
 }
