--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "This repo exists for RD students needs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack-dev-server --progress --config webpack.dev.js",
+    "test": "node ./node_modules/karma/bin/karma start ",
     "lint-staged": "lint-staged",
     "lint": "eslint --fix --ext .js,.jsx ."
   },
@@ -15,24 +17,54 @@
     "FE",
     "JavaScript"
   ],
-  "author": "Vitalii Rybka, @var_bincom",
+  "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.8.3",
     "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.4.2",
     "eslint": "^6.3.0",
     "eslint-plugin-import": "^2.18.2",
+    "file-loader": "^5.0.2",
+    "html-webpack-plugin": "^3.2.0",
     "htmllint-cli": "^0.0.7",
     "husky": "^3.0.5",
+    "jasmine-core": "^3.5.0",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.1",
+    "karma-jasmine": "^3.1.0",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "karma-jasmine-matchers": "^4.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "^4.0.2",
     "lint-staged": "^9.2.5",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.3",
     "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.3.0"
+    "stylelint-config-standard": "^18.3.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^3.0.0",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "babel-eslint": "^10.0.3",
     "bootstrap-sass": "^3.4.1",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "jquery": "^3.4.1"
   }
 }
