--- a/package.json
+++ b/package.json
@@ -1,38 +1,49 @@
 {
-  "name": "rd_fe_students_pack",
-  "private": true,
-  "version": "1.0.0",
-  "description": "This repo exists for RD students needs",
-  "main": "index.js",
+  "name": "hw29",
+  "version": "0.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint-staged": "lint-staged",
-    "lint": "eslint --fix --ext .js,.jsx ."
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "keywords": [
-    "RD",
-    "Front-End",
-    "FE",
-    "JavaScript"
-  ],
-  "author": "Vitalii Rybka, @var_bincom",
-  "license": "Apache-2.0",
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.3.0",
-    "eslint-plugin-import": "^2.18.2",
-    "htmllint-cli": "^0.0.7",
-    "husky": "^3.0.5",
-    "lint-staged": "^9.2.5",
-    "node-sass": "^4.12.0",
-    "stylelint": "^10.1.0",
-    "stylelint-config-standard": "^18.3.0"
-  },
+  "private": true,
   "dependencies": {
-    "bootstrap-sass": "^3.4.1",
-    "jquery": "^3.4.1"
+    "@angular/animations": "~9.0.1",
+    "@angular/common": "~9.0.1",
+    "@angular/compiler": "~9.0.1",
+    "@angular/core": "~9.0.1",
+    "@angular/forms": "~9.0.1",
+    "@angular/platform-browser": "~9.0.1",
+    "@angular/platform-browser-dynamic": "~9.0.1",
+    "@angular/router": "~9.0.1",
+    "bootstrap": "^4.4.1",
+    "rxjs": "~6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.900.2",
+    "@angular/cli": "~9.0.2",
+    "@angular/compiler-cli": "~9.0.1",
+    "@angular/language-service": "~9.0.1",
+    "@fortawesome/fontawesome-free": "^5.12.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~4.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~5.18.0",
+    "typescript": "~3.7.5"
   }
 }
