--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint --fix=true",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "server": "json-server --watch --delay=1000  db.json"
   },
   "private": true,
   "dependencies": {
